# longest-word

./: .gitignore  README.md  app.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: .cd.yml  .python-ci.yml
longest_word/: game.py
longest_word/static/: style.css
tests/: test_game.py
