[tool.poetry]
name = "longest-word"
version = "0.1.0"
description = ""
authors = ["Bruno Lajoie <brunolajoie@gmail.com>"]
readme = "README.md"
packages = [{include = "longest_word"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.0"
pylint = "^2.15.5"
requests = "^2.28.1"
flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v --color=yes"
